# Cyclist_body_steamlit

./: README.md  main.py  pyproject.toml  requirements.txt
src/app/human_body/: bike_class.py  human_body_2d.py
src/app/human_body/legacy/: __init__.py  bike_class_OLD.py  human_body_2d_OLD.py
src/app/streamlit/: Stremlit_main.py  animation_details_class.py  animations.py  animations_layout.py  first_Steps.py
src/app/streamlit/.streamlit/: config.toml
src/app/streamlit/legacy/: __init__.py  animations_OLD.py
tests/: test_animaton.py  test_plot.py
